sfdx-source/main/default/objects/CSVPaserResult__e/fields/Errors__c.field-meta.xml
<CustomField>
    <fullName>Errors__c</fullName>
    <description>Errors form the CSVParser process</description>
    <label>Errors</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>