sfdx-source/main/default/objects/CSVPaserResult__e/fields/Record_ID__c.field-meta.xml
<CustomField>
    <fullName>Record_ID__c</fullName>
    <description>Record ID processed by the CSV parser</description>
    <label>Record ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>