sfdx-source/main/default/objects/CSVPaserResult__e/fields/Result__c.field-meta.xml
<CustomField>
    <fullName>Result__c</fullName>
    <description>The results of the parsting</description>
    <label>Result</label>
    <length>255</length>
    <type>Text</type>
</CustomField>